@startuml Class Diagram - Shared Kernel Only

skinparam classAttributeIconSize 0
skinparam linetype ortho

package "Shared Bounded Context" {
    
    package "Domain" {
        note "Contratos Vacíos / Abstracciones" as N1
        
        interface "IBaseRepository<TEntity>" as IBaseRepository {
            +AddAsync(entity: TEntity): Task
            +FindByIdAsync(id: int): Task<TEntity?>
            +Update(entity: TEntity): void
            +Remove(entity: TEntity): void
            +ListAsync(): Task<IEnumerable<TEntity>>
        }

        interface IUnitOfWork {
            +CompleteAsync(): Task
        }

        interface IEvent {
            ' Marker interface for Domain Events
        }
    }

    package "Application" {
        note "Event Definitions" as N2
        
        interface "IEventHandler<TEvent>" as IEventHandler {
            +Handle(notification: TEvent, cancellationToken: CancellationToken): Task
        }
    }

    package "Infrastructure" {
        note "Implementación Técnica (EF Core)" as N3
        
        class AppDbContext {
            +AppDbContext(options: DbContextOptions)
            #OnModelCreating(builder: ModelBuilder): void
            +SaveChangesAsync(): Task<int>
        }

        class "BaseRepository<TEntity>" as BaseRepository {
            #Context: AppDbContext
            +BaseRepository(context: AppDbContext)
            +AddAsync(entity: TEntity): Task
            +FindByIdAsync(id: int): Task<TEntity?>
            +Update(entity: TEntity): void
            +Remove(entity: TEntity): void
            +ListAsync(): Task<IEnumerable<TEntity>>
        }

        class UnitOfWork {
            -_context: AppDbContext
            +UnitOfWork(context: AppDbContext)
            +CompleteAsync(): Task
        }
    }

    ' Relaciones
    BaseRepository ..|> IBaseRepository : implements (Cumple el contrato)
    UnitOfWork ..|> IUnitOfWork : implements (Cumple el contrato)
    
    BaseRepository --> AppDbContext : Inyecta/Usa
    UnitOfWork --> AppDbContext : Inyecta/Usa

    IEventHandler ..> IEvent : Handles
}

@enduml
